# libcoredd

./: CMakeLists.txt  Doxyfile.in
coredd/: CMakeLists.txt  cache.hh  hash.hh  linear_alloc.hh  packed.hh  ptr.hh  unicity.hh  visit.hh
coredd/detail/: apply_filters.hh  cache_entry.hh  construct.hh  hash_table.hh  intrusive_member_hook.hh  lru_list.hh  next_power.hh  pool.hh  typelist.hh  union_storage.hh  unique.hh  unique_table.hh  variant.hh
examples/: CMakeLists.txt  SimpleDD.cc
tests/: CMakeLists.txt  test_cache.cc  test_ptr.cc  test_unique_table.cc  test_variant.cc
tests/detail/: test_hash_table.cc  test_next_power.cc  test_typelist.cc
